# shift-dfa-utf8

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  benchmark.txt  flake.nix  result-i686.txt  result-x86_64.txt  run_benchmark.sh  solve_dfa.py
bench-de/: Cargo.toml  README.md  benchmark.txt  result-x86_64.txt
bench-de/benches/: cbor.rs
benches/: lossy.rs  validate_utf8.rs
src/: lib.rs  lossy.rs  tests.rs
test_data/: en.txt  es.txt  zh.txt
