[package]
name = "shift-dfa-utf8"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
bench-unaligned = []

[dependencies]

[dev-dependencies]
clap = { version = "4.5.28", features = ["help"] }
criterion = "0.5.1"

[[bench]]
name = "validate_utf8"
harness = false

[profile.release]
debug = 1

[workspace]
members = ["bench-de"]

