[package]
name = "shift-dfa-utf8"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

[dev-dependencies]
# For stack stabilizer, see: https://github.com/bheisler/criterion.rs/pull/744
criterion.git = "https://github.com/oxalica/criterion.rs.git"

[[bench]]
name = "validate_utf8"
harness = false

[profile.release]
debug = 1

[workspace]
members = ["bench-de"]

